# mse-cli

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  mse_ctl.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: backend.yml  cd.yml  ci.yml  doc.yml  scheduled.yml
docs/: api.rst  conf.py  crypto_context.rst  index.rst  response.rst
documentation/: README.md  build_pdf.sh  includes.yml  mkdocs.yml  mkdocs_iframe.yml
documentation/docs/: configuration.md  develop.md  getting_started.md  how_it_works_deploy.md  how_it_works_use.md  overview.md  scenarii.md  scenarios.md  security.md
documentation/iframe_theme/: main.html
documentation/pandoc/: eisvogel.tex
examples/: enclave.example.toml  mse.toml  user.example.toml
mse_cli/: __init__.py  color.py  error.py  log.py  main.py
mse_cli/api/: __init__.py  app.py  auth.py  hardware.py  plan.py  project.py  types.py  user.py
mse_cli/command/: __init__.py  context.py  deploy.py  helpers.py  init.py  list_all.py  login.py  logout.py  logs.py  remove.py  scaffold.py  status.py  stop.py  test.py  verify.py
mse_cli/common/: __init__.py  helpers.py
mse_cli/conf/: app.py  context.py  user.py
mse_cli/core/: base64.py  bootstrap.py  clock_tick.py  conf.py  enclave.py  fs.py  ignore_file.py  no_sgx_docker.py  sgx_docker.py  spinner.py  test_docker.py
mse_cli/model/: __init__.py  app.py  context.py  user.py
mse_cli/template/: Dockerfile  README.md  mse.toml.template  requirements-dev.txt
mse_cli/utils/: __init__.py  base64.py  clock_tick.py  color.py  fs.py  ignore_file.py  spinner.py
mse_ctl/: __init__.py  log.py  main.py  run.py
mse_ctl/api/: __init__.py  app.py  auth.py  enclave.py  plan.py  project.py  types.py  user.py
mse_ctl/cli/: __init__.py  context.py  deploy.py  helpers.py  init.py  list.py  list_all.py  login.py  logout.py  remove.py  scaffold.py  signup.py  status.py  stop.py  test.py  verify.py
mse_ctl/conf/: __init__.py  app.py  context.py  (+3 more)
public_documentation/: README.md  mkdocs.yml
tests/: conftest.py  keys.py  test_api.py  test_api_code_url.py  test_app_conf.py  test_base64.py  test_boostrap.py  test_cli.py  test_cli_cloud.py  test_cli_cloud_error.py  test_cli_error.py  test_cli_home.py  test_conf.py  test_context.py  test_crypto.py  test_helpers.py  test_ignore_file.py  test_model_evidence.py  test_model_package.py  test_no_sgx_docker.py  test_sgx_docker.py  test_status.py  test_test_docker.py  test_types.py  test_user_conf.py  test_utils.py
(+236 files in other folders)
